--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,7 @@ theme: jekyll-theme-architect
 title: Welcome to my home page
 description: I belive you`d be intersted in this page!
 image: https://images.pexels.com/photos/110854/pexels-photo-110854.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500
+href: https://calendar.google.com/event?action=TEMPLATE&amp
+tmeid: NmEwbTZ0ZmwwODU4YmVxYWtiaWNlMTNta24gaXJlbmthc21vQG0&amp
+tmsrc: irenkasmo%40gmail.com"><img border="0" 
+src: https://www.google.com/calendar/images/ext/gc_button1_uk.gif"></a>
